--- a/package.json
+++ b/package.json
@@ -1,54 +1,30 @@
 {
-  "name": "react-theory",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@babel/polyfill": "^7.11.5",
-    "autoprefixer": "10.0.0",
-    "babel-core": "6.26.3",
-    "babel-eslint": "10.1.0",
-    "babel-jest": "26.3.0",
-    "babel-preset-react-app": "^9.1.2",
-    "babel-runtime": "6.26.0",
-    "case-sensitive-paths-webpack-plugin": "2.3.0",
-    "chalk": "4.1.0",
-    "cross-env": "^7.0.2",
-    "dotenv": "8.2.0",
-    "dotenv-expand": "5.1.0",
-    "eslint": "7.9.0",
-    "eslint-config-react-app": "^5.2.1",
-    "eslint-loader": "4.0.2",
-    "eslint-plugin-flowtype": "5.2.0",
-    "eslint-plugin-import": "2.22.0",
-    "eslint-plugin-jsx-a11y": "6.3.1",
-    "eslint-plugin-react": "7.20.6",
-    "extract-text-webpack-plugin": "3.0.2",
-    "fs-extra": "9.0.1",
-    "jest": "26.4.2",
-    "node-sass": "^4.14.1",
-    "object-assign": "4.1.1",
-    "postcss-flexbugs-fixes": "4.2.1",
-    "postcss-loader": "4.0.2",
-    "promise": "8.1.0",
-    "radium": "^0.26.0",
-    "raf": "3.4.1",
-    "react": "^16.13.1",
-    "react-dev-utils": "^10.2.1",
-    "react-dom": "^16.13.1",
-    "react-scripts": "^2.1.8",
-    "resolve": "1.17.0",
-    "sass-loader": "^10.0.2",
-    "sw-precache-webpack-plugin": "1.0.0",
-    "url-loader": "4.1.0",
-    "webpack-manifest-plugin": "2.2.0",
-    "whatwg-fetch": "3.4.1"
-  },
+  "name": "mern-stack",
+  "version": "1.0.0",
+  "description": "MongoDB ExpressJS ReactJS NodeJs",
+  "main": "app.js",
   "scripts": {
     "start": "webpack-dev-server --mode development --open",
-    "dev": "cross-env NODE_ENV=development webpack --mode development",
+    "client:install": "webpack",
+    "client:build": "",
+    "server:prod": "cross-env NODE_ENV=production node app.js",
+    "server:dev": "nodemon app.js",
+    "dev": "concurrently \"npm run server:dev\" \"npm run start\"",
     "build": "cross-env NODE_ENV=production webpack --mode production",
     "test": "node scripts/test.js --env=jsdom"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Exortist/mern-stack.git"
+  },
+  "keywords": [
+    "React",
+    "NodeJs"
+  ],
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "proxy": "http://localhost:3000",
   "jest": {
     "collectCoverageFrom": [
       "src/**/*.{js,jsx,mjs}"
@@ -83,8 +59,56 @@
       "mjs"
     ]
   },
-  "eslintConfig": {
-    "extends": "react-app"
+  "author": "",
+  "dependencies": {
+    "@babel/polyfill": "^7.11.5",
+    "autoprefixer": "10.0.0",
+    "babel-core": "6.26.3",
+    "babel-eslint": "10.1.0",
+    "babel-jest": "26.3.0",
+    "babel-preset-react-app": "^9.1.2",
+    "babel-runtime": "6.26.0",
+    "bcryptjs": "^2.4.3",
+    "case-sensitive-paths-webpack-plugin": "2.3.0",
+    "chalk": "4.1.0",
+    "config": "^3.3.2",
+    "cross-env": "^7.0.2",
+    "dotenv": "8.2.0",
+    "dotenv-expand": "5.1.0",
+    "eslint": "7.9.0",
+    "eslint-config-react-app": "^5.2.1",
+    "eslint-loader": "4.0.2",
+    "eslint-plugin-flowtype": "5.2.0",
+    "eslint-plugin-import": "2.22.0",
+    "eslint-plugin-jsx-a11y": "6.3.1",
+    "eslint-plugin-react": "7.20.6",
+    "express": "^4.17.1",
+    "express-validator": "^6.6.1",
+    "extract-text-webpack-plugin": "3.0.2",
+    "fs-extra": "9.0.1",
+    "jest": "26.4.2",
+    "jsonwebtoken": "^8.5.1",
+    "materialize-css": "^1.0.0-rc.2",
+    "mongoose": "^5.10.9",
+    "node-sass": "^4.14.1",
+    "object-assign": "4.1.1",
+    "postcss-flexbugs-fixes": "4.2.1",
+    "postcss-loader": "4.0.2",
+    "promise": "8.1.0",
+    "radium": "^0.26.0",
+    "raf": "3.4.1",
+    "react": "^16.13.1",
+    "react-dev-utils": "^10.2.1",
+    "react-dom": "^16.13.1",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "^2.1.8",
+    "resolve": "1.17.0",
+    "sass-loader": "^10.0.2",
+    "shortid": "^2.2.16",
+    "sw-precache-webpack-plugin": "1.0.0",
+    "url-loader": "4.1.0",
+    "webpack-manifest-plugin": "2.2.0",
+    "whatwg-fetch": "3.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.11.6",
@@ -95,11 +119,13 @@
     "babel-plugin-transform-react-jsx": "^6.24.1",
     "babel-plugin-transform-react-pug": "^7.0.1",
     "clean-webpack-plugin": "^3.0.0",
+    "concurrently": "^5.3.0",
     "copy-webpack-plugin": "^6.1.1",
     "css-loader": "^4.3.0",
     "file-loader": "^6.1.0",
     "html-webpack-plugin": "^4.4.1",
     "mini-css-extract-plugin": "^0.11.2",
+    "nodemon": "^2.0.6",
     "optimize-css-assets-webpack-plugin": "^5.0.4",
     "prop-types": "^15.7.2",
     "style-loader": "^1.2.1",
@@ -108,5 +134,10 @@
     "webpack-bundle-analyzer": "^3.9.0",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0"
-  }
+  },
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Exortist/mern-stack/issues"
+  },
+  "homepage": "https://github.com/Exortist/mern-stack#readme"
 }
